# rust-telemetry-example

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  claude.yml  rust.yml
.sqlx/: query-0ed3266ceec98d79d5b0f64503ff521d0f0396af6ed5ac4cfcf0818fb8f107a6.json  query-4bf2a91ceeef26e96e4e7586d6e8d1514995a9230b3346ecb5fa51390078bcc8.json  query-9cbaf45deea5edd5dd76fa5b37705979d9fdb6315fdbf2b612aeeb05ecbe9c3b.json  query-b2b8a18b798302cdc867448e630249f0ff4e46a16350ddce72d6977f8146a6bd.json  query-dcb0d0dda90fbb483347ec252bbb5b71dca81ccc19ee983bb8b3a4736cba58c6.json
axum-otel-metrics/: Cargo.toml
axum-otel-metrics/src/: lib.rs
bookapp/: Cargo.toml
bookapp/migrations/: 20240129174649_initial.sql  202410071120_configurable_errors.sql  20250211025621_enum-book-status.sql
bookapp/src/: book_details.rs  book_ingestion.rs  db.rs  error_injection_middleware.rs  main.rs  reqwest_traced_client.rs  rest.rs  rest_tests.rs  sentry_correlation.rs  topic_management.rs  tracing_config.rs
client/: Cargo.toml  build.rs  spec.yaml
client/src/: generated.rs  lib.rs  otel.rs
migrations/: 20240129174649_initial.sql
requests/: error-injection.http  get.http  locustfile.py  rest-api.http
src/: client.rs  db.rs  main.rs  rest.rs  tracing_config.rs
telemetry-config/: grafana-dashboards.yaml  otelcon-config.yaml  tempo-config.yaml
telemetry-config/alerts/: evaluation-group.json
telemetry-config/dashboards/: my-custom-dashboard.json  opentelemetry-collector.json
tests/: Cargo.toml
tests/src/: lib.rs  telemetry_test.rs
