[package]
name = "bookapp"
version = "0.1.0"
edition = "2021"


[dependencies]
client = { path = "../client" }
tower-otel-http-metrics = { version = "0.14.0", features = ["axum"] }

anyhow = "1.0.97"
axum = { workspace = true, features = ["macros", "matched-path", "tracing" ] }
dotenv = "0.15.0"
opentelemetry = { workspace = true}
opentelemetry-otlp = { version="0.29.0" , features = [
    "serialize",
    "reqwest-client",
    "grpc-tonic",
]}
opentelemetry_sdk = { version="0.29.0", features = ["trace", "opentelemetry-http", "rt-tokio", "tracing"]}
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.43", features = ["full", "tracing"] }
tower = {workspace = true}
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true , features=["async-trait"]}
tracing-subscriber = { version = "0.3.19", features=["fmt", "env-filter", "json", "tracing-log"] }
reqwest = {workspace = true}

reqwest-middleware = { version="0.4.2", features = ["json"] }
reqwest-tracing = { version="0.5.7",  features = ["opentelemetry_0_29"] }

futures = "0.3.31"

axum-tracing-opentelemetry = { version = "0.28.0", features = [] }

tracing-opentelemetry-instrumentation-sdk = { version = "0.28.0", features = ["tracing_level_info"] }


rdkafka = { version = "0.37.0", features = ["tokio"] }
serde_json = "1.0.140"
opentelemetry-http = "0.29.0"
tracing-loki = "0.2.6"
hostname = "0.4.0"
opentelemetry-appender-tracing = { version = "0.29.1" , features = ["experimental_use_tracing_span_context"]}
hyper = "1.6.0"
rand = "0.9.0"
matchit = "^0.8"
console-subscriber = "0.4.1"
async-trait = "0.1.87"
