[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.141" }
opentelemetry = { workspace = true}
tracing-opentelemetry = { workspace = true, features=["async-trait"] }
progenitor-client = { version = "0.11" }


[build-dependencies]
progenitor = {version = "0.11"}
quote = "1.0.40"
serde_yaml = { version = "0.9.34" }
syn = { version = "2.0.104" }
prettyplease = { version = "0.2.35" }
