[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "integration_tests"
path = "src/lib.rs"

[[test]]
name = "telemetry_test"
path = "src/telemetry_test.rs"
harness = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
opentelemetry = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace", "trace_context_propagator"] }
opentelemetry_otlp = { version = "0.15", features = ["reqwest-client", "grpc-tonic", "tonic"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"
urlencoding = "2.1"
